--- a/CruiserSkinNARPatch.csproj
+++ b/CruiserSkinNARPatch.csproj
@@ -61,22 +61,22 @@
 
     <ItemGroup>
       <Reference Include="0Harmony">
-        <HintPath>C:\Users\minec\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\CruiserTest\BepInEx\core\0Harmony.dll</HintPath>
+        <HintPath>..\Libraries\0Harmony.dll</HintPath>
       </Reference>
       <Reference Include="Assembly-CSharp">
-        <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
+        <HintPath>..\Libraries\Assembly-CSharp.dll</HintPath>
       </Reference>
       <Reference Include="BepInEx">
-        <HintPath>C:\Users\minec\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\CruiserTest\BepInEx\core\BepInEx.dll</HintPath>
+        <HintPath>..\Libraries\BepInEx.dll</HintPath>
       </Reference>
       <Reference Include="CruiserSkin">
-        <HintPath>C:\Users\minec\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\CruiserMinTest\BepInEx\plugins\EffMapis-CruiserSkin\CruiserSkin.dll</HintPath>
+        <HintPath>..\Libraries\CruiserSkin.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine">
-        <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.dll</HintPath>
+        <HintPath>..\Libraries\UnityEngine.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine.CoreModule">
-        <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+        <HintPath>..\Libraries\UnityEngine.CoreModule.dll</HintPath>
       </Reference>
     </ItemGroup>
 </Project>
